--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>C. Scott Bailey</title>
+		<link href='http://fonts.googleapis.com/css?family=Caudex:400,700|Cutive' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 
 		<!--[if !IE 7]>
