Set size of body and container, fonts, relative sizes of boxes, colors of boxes

--- a/frontpage.html
+++ b/frontpage.html
@@ -10,10 +10,10 @@
 	<body>
 		<div class="container">	
 			<div id="name"> <h1> Scott Bailey </h1></div>
-			<div class="box" id="about"> </div>
-			<div class="box" id="cv"></div>
-			<div class="box" id="research"></div>
-			<div class="box" id="technology"></div>
+			<div class="box" id="about"> about </div>
+			<div class="box" id="cv"> curriculum vitae </div>
+			<div class="box" id="research"> research </div>
+			<div class="box" id="technology"> technology </div>
 		</div>
 
 	</body>
