changes to boxes

--- a/frontpage.html
+++ b/frontpage.html
@@ -9,11 +9,15 @@
 	
 	<body>
 		<div class="container">	
-			<div id="name"> <h1> Scott Bailey </h1></div>
-			<div class="box" id="about"> about </div>
-			<div class="box" id="cv"> curriculum vitae </div>
-			<div class="box" id="research"> research </div>
-			<div class="box" id="technology"> technology </div>
+			<div id "left">	
+				<div id="name"> <h1> Scott Bailey </h1></div>
+			</div>
+			<div id="right">	
+				<div class="box" id="about"> about </div>
+				<div class="box" id="cv"> curriculum vitae </div>
+				<div class="box" id="research"> research </div>
+				<div class="box" id="technology"> technology </div>
+			</div>	
 		</div>
 
 	</body>
