--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>C. Scott Bailey</title>
 		<link href="http://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet" type="text/css">
 		<link href="http://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet" type="text/css">
-		<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+		<link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 		<!--[if !IE 7]>
 		<style type="text/css">
